<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/presets_menu_add"
        android:icon="@drawable/menu_add"
        android:title="@string/add_preset"/>
    <item
        android:id="@+id/presets_menu_export"
        android:icon="@drawable/menu_export"
        android:title="@string/export_presets"/>
    <item
        android:id="@+id/presets_menu_import"
        android:icon="@drawable/menu_import"
        android:title="@string/import_presets"/>
    <item
        android:id="@+id/presets_menu_show_trash_bin"
        android:icon="@drawable/menu_show_deleted"
        android:title="@string/show_trash_bin"/>
    <item
        android:id="@+id/presets_menu_clear_trash_bin"
        android:icon="@drawable/menu_delete_bin"
        android:title="@string/clear_trash_bin"/>
    <item
        android:id="@+id/presets_menu_show_conflicts"
        android:icon="@drawable/menu_info"
        android:title="@string/conflicts_show"/>

</menu>